--- a/docs/styles/pages/lobby.css
+++ b/docs/styles/pages/lobby.css
@@ -24,16 +24,32 @@
     gap: 15px;
 }
 
-.participant-profile-wrapper {
+.participant-profile-card {
     width: var(--profile-width);
     height: var(--profile-height);
     border-radius: var(--roundness);
     padding: 10px;
-    border: 1px solid var(--panel-primary-border)
+    border: 1px solid var(--panel-primary-border);
+    position: relative;
 }
 
-.participant-profile-wrapper.this-user {
-    background-color: #afa15b76;
+.participant-profile-card.this-user {
+    border-color: #ffd500;
+}
+
+.participant-profile-ready-blocker {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    border-radius: var(--roundness);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffff8855;
+    z-index: 1;
+    pointer-events: none; /*Allows hover on things below*/
 }
 
 .participant-profile-vert-wrapper {
@@ -44,7 +60,30 @@
     width: var(--profile-width);
     height: var(--profile-width);
     border-radius: 50%;
-    border: 1px solid #199da4;
+    border: 1px solid #FFFFFF;
+    overflow: hidden;
+    position: relative;
+}
+
+.participant-profile-avatar-image {
+    width: 100%;
+    height: 100%;
+}
+
+.participant-profile-role-hover {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #44444499;
+    opacity: 0%;
+    transition: opacity 0.5s;
+}
+
+.participant-profile-role-hover:hover {
+    opacity: 100%;
 }
 
 .participant-profile-name {
