--- a/docs/styles/pages/lobby.css
+++ b/docs/styles/pages/lobby.css
@@ -7,8 +7,6 @@
 #lobby-participants-panel {
     height: 200px;
     width: 400px;
-    gap: 15px;
-    overflow: auto;
 }
 
 #lobby-room-controls-panel {
@@ -20,6 +18,21 @@
 
 #lobby-page-content-vert-wrapper {
     gap: 15px;
+}
+
+#lobby-room-waiting-room-content {
+    gap: 15px;
+}
+
+#lobby-room-participants-content {
+    gap: 15px;
+    overflow: auto;
+    height: 200px;
+}
+
+#lobby-room-waiting-room-loader {
+    height: 100px;
+    border-radius: var(--roundness);
 }
 
 .participant-profile-card {
