--- a/docs/styles/pages/mcq.css
+++ b/docs/styles/pages/mcq.css
@@ -2,3 +2,9 @@
     width: 250px;
     border-radius: var(--roundness);
 }
+
+#mcq-game-page-question-image {
+    width: 250px;
+    height: 200px;
+    overflow: hidden;
+}
