Main gameplay loop complete!
- Team code input before MCQ answering
- Answering timer work correctly to request new question
- Baron code dismissal also requests new question
- Placeholders on inputs
- Admin now stores Baron codes – does NOT distribute to baron computer
    - Baron computer will verify codes with the admin

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -92,3 +92,10 @@ body {
 .hide {
     display: none !important;
 }
+
+.panel {
+    border-radius: var(--roundness);
+    border: 1px solid var(--panel-primary-border);
+    background: var(--panel-primary-background);
+    padding: 20px;
+}
