--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -8,17 +8,21 @@
     --font-small: 12px;
 
     --background-color: #292929;
-    /* --primary-color: ; */
-    /* --primary-background-color: #0e1427; */
-    /* --secondary-color:  */
-    /* --secondary-background-color: ;  */
-    /* --accent-color: */
-    /* --fade-color:; */
-    /* --fade-background-color: ; */
-    --panel-primary-border: #4f5f77af;
+    --primary-text-color: #bab997;
+    --secondary-text-color: #bab99780;
+
+    --panel-primary-border: #c4a323af;
+    --panel-secondary-border: #7aafffaf;
     --panel-primary-background: #1b2535;
-    --text-color: #fafafa;
-    --text-color-faded: #b7b7b7;
+
+    --button-primary-text-color: #bab997;
+    --button-primary-background: #2c2c2c;
+    --button-primary-border: #c4a323af;
+    --button-hover-border: #fdd63c;
+    --button-disabled-text-color: #493f17;
+    --button-disabled-border: #493f17;
+
+    --error-primary-border: #FF0000;
 
     --profile-width: 46px;
     --profile-height: 80px;
@@ -29,7 +33,7 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: var(--background-color);
-    color: var(--text-color);
+    color: var(--primary-text-color);
 }
   
 body {
@@ -94,8 +98,73 @@ body {
 }
 
 .panel {
-    border-radius: var(--roundness);
     border: 1px solid var(--panel-primary-border);
     background: var(--panel-primary-background);
     padding: 20px;
+    width: auto;
+}
+
+/* Input styling - see https://www.w3schools.com/css/css_form.asp */
+input, input[type=text] {
+    cursor: pointer;
+    padding: 5px 10px;
+    background: var(--button-primary-background);
+    color: var(--button-primary-text-color);
+    border: 1px solid var(--button-primary-border);
+    transition: background-color 0.5s, border 0.5s, color 0.5s;
+}
+
+input.wrong, input[type=text].wrong {
+    animation: input-wrong-animation 0.5s infinite;
+}
+
+@keyframes input-wrong-animation {
+    20%, 40%, 60%, 80% {transform: translate(-1px, 0px);}
+    10%, 30%, 50%, 70%, 90% {transform: translate(1px, 0px);}
+    10%, 90% {border: 1px solid var(--error-primary-border);}
+}
+
+
+input:hover:not(:disabled) {
+    border-color: var(--button-hover-border);
+}
+
+button {
+    cursor: pointer;
+    padding: 5px 10px;
+    background: var(--button-primary-background);
+    color: var(--button-primary-text-color);
+    border: 1px solid var(--button-primary-border);
+    transition: background-color 0.5s, border 0.5s, color 0.5s;
+}
+
+button:disabled {
+    cursor: default;
+    border-color: var(--button-disabled-border);
+    color: var(--button-disabled-text-color);
+}
+
+button:hover:not(:disabled) {
+    border-color: var(--button-hover-border);
+}
+
+
+
+/* Scrollbar styling - see https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    transition: background-color 0.5s, border 0.5s, color 0.5s;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    background: var(--button-primary-background); 
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--button-primary-border); 
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--button-hover-border); 
 }
